* Add `Cspace::AddressCountry` transform. In https://github.com/lyrasis/kiba-extend/pull/72[PR#72]
* Add `null_placeholder` parameter to `Merge::MultiRowLookup`, which will replace any blank values in merged field values with the given string. Useful for building repeating field groups in CollectionSpace migrations. In https://github.com/lyrasis/kiba-extend/pull/70[PR#70]

==== Changed
* Make `Delete::EmptyFieldValues` `Allable`. In https://github.com/lyrasis/kiba-extend/pull/73[PR#73]
* If given an "existing" field that does not exist, `Rename::Field` transform will warn about it, but not throw an exception. This supports building reusable jobs where the data may be slightly different from use to use. In https://github.com/lyrasis/kiba-extend/pull/71[PR#71]
* BUGFIX: `Clean::RegexpFindReplaceFieldVals` now skips non-string field values instead of trying to call `:gsub` on them and failing with `NoMethodError`. In https://github.com/lyrasis/kiba-extend/pull/68[PR#68]

==== Deleted

==== To be deprecated/Will break in a future version

== Releases
=== 2.7.2 - 2022-04-05
https://github.com/lyrasis/kiba-extend/compare/v2.7.1\...v2.7.2[Compare code changes]

==== Added
* When setting up a file registry hash, `creator` may be a `Hash` if you need to pass keyword arguments to your job. See https://lyrasis.github.io/kiba-extend/file.file_registry_entry.html#creator[File registry entry reference] for more info and examples. In https://github.com/lyrasis/kiba-extend/pull/67[PR#67]
* When setting up a file registry hash, `creator` may be a `Module` if the relevant job is a private instance method named with the configured `default_job_method_name` (The default is `:job`). See https://lyrasis.github.io/kiba-extend/file.file_registry_entry.html#creator[File registry entry reference] for more info and examples. In https://github.com/lyrasis/kiba-extend/pull/67[PR#67]
* `default_job_method_name` config setting. In https://github.com/lyrasis/kiba-extend/pull/67[PR#67]